# fastgen

./: .gitignore  main.py  pyproject.toml  requirements.txt
